2012-05-06  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c, x_im.c: Hack to avoid calling ibus_init() more than once
	  is added. (If ibus daemon was not found last time and ibus_init() is
	  called again, segfault happens.)

2012-05-06  Araki Ken  <arakiken@users.sf.net>

	* etc/font.win32.indic: Added.

	* README.indic, aafont.indic: Updated.

	* ml_iscii.c: libiscii_xxx.so modules are possible to be loaded from
	  current working directory.

	* win32/x_font.c: is_var_col_width of ISCII font is always true.

2012-05-05  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.[ch], x_screen.c:
	  FocusIn/FocusOut event tracking (CSI ? 1004 h and CSI ? 1004 l) is supported.

2012-05-04  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java:
	  The way to get mouse position is improved.

	* MLTermPty.java:
	  isTrackingMouse() method is added to check mouse traking mode is on or off.

	* ml_vt100_parser.[ch], x_screen.c, java/MLTermPty.c:
	  Extended mouse report(SGR/URXVT) is supported.

	* x_draw_str.c: Even if fg/bg color is reversed, bd_color and ul_color
	  options work correctly.
	  (Thanks to Andi Cristian Serbanescu)

	* mkf/script/config.guess, kiklib/script/config.guess,
	  script/config.guess: updated (timestamp='2012-02-10')

	* mkf/script/config.sub, kiklib/script/config.sub,
	  script/config.sub: updated (timestamp='2012-04-18')

	* win32/x_window.c: Fixed typo.

2012-04-30  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL: Updated.

	* configure.in: --enable-sixel option is added.

	* ml_vt100_parser.c: DCS .. q .. ST sequence is supported.

	* Sixel format picture is partially supported.

	* "add_picture" and "remove_picture" are added to configuration protocol.

	* version.h.in: 3.1.1 => 3.1.1 post

2012-04-29  Araki Ken  <arakiken@users.sf.net>

	* 3.1.1 released.
	  (tag "rel-3_1_1")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 3.1.1.

	* configure.in: If xlib is not found, configure script exits.
