@@ -28,8 +28,8 @@ typedef struct x_system_event_listener
 {
 	void *  self ;
 
-	void  (*open_screen)( void * , x_screen_ptr_t , char *) ;
-	void  (*close_screen)( void * , x_screen_ptr_t , char *) ;
+	void  (*open_screen)( void * , x_screen_ptr_t) ;
+	void  (*close_screen)( void * , x_screen_ptr_t) ;
 	void  (*open_pty)( void * , x_screen_ptr_t , char *) ;
 	void  (*next_pty)( void * , x_screen_ptr_t) ;
 	void  (*prev_pty)( void * , x_screen_ptr_t) ;
